--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,3 +1,6 @@
+import:
+- /home/mae/.config/alacritty/themes/kanagawa_dragon.yaml
+
 font:
   normal:
     family: FantasqueSansM Nerd Font Mono
@@ -18,7 +21,9 @@ font:
   size: 10.5
 
 window:
-  opacity: 0.9
   dimensions:
     columns: 128
     lines: 32
+  padding:
+    x: 4
+    y: 4
